--- a/compositional_skills/writing/freeform/riddles/qna.yaml
+++ b/compositional_skills/writing/freeform/riddles/qna.yaml
@@ -20,5 +20,6 @@ seed_examples:
       I have two hands but no head?
       A clock
     question: Tell me a riddle about clock.
-task_description: |
-  The riddles are interesting and tests your attention to detail in the question.
+task_description: >
+  The riddles are interesting and tests your attention to detail in the
+  question.
