Update labels based on feedback
Signed-off-by: Nathan Weinberg <nweinber@redhat.com>

--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -1,11 +1,9 @@
+ci:
+- .github/workflows/**/*
+- .github/labeler.yml
+
 documentation:
 - CODE_OF_CONDUCT.md
 - README.md
 - CONTRIBUTING.md
 - docs/**/*
-
-knowledge:
-- knowledge/**/*
-
-skill:
-- compositional_skills/**/*
