--- a/compositional_skills/extraction/abstractive/abstract/qna.yaml
+++ b/compositional_skills/extraction/abstractive/abstract/qna.yaml
@@ -104,3 +104,4 @@ seed_examples:
     \ vihuela, a guitar- shaped string instrument.\n"
   question: Could you generate an abstract for the given text?
 task_description: ''
+attribution: 'self authored'
