--- a/compositional_skills/extraction/information/named_entities/dates_and_events/qna.yaml
+++ b/compositional_skills/extraction/information/named_entities/dates_and_events/qna.yaml
@@ -77,3 +77,4 @@ seed_examples:
     \ Gallery of Australia( Canberra) from 1997- 2004.\n"
   question: Extract the dates and events mentioned in the given text.
 task_description: ''
+attribution: 'self_authored'
