--- a/compositional_skills/writing/freeform/brainstorming/idea_generation/qna.yaml
+++ b/compositional_skills/writing/freeform/brainstorming/idea_generation/qna.yaml
@@ -36,3 +36,4 @@ seed_examples:
   question: Generate 5 creative ideas for a marketing campaign promoting a new line
     of eco-friendly or sustainable products for the home.
 task_description: ''
+attribution: 'self_authored'
