--- a/compositional_skills/writing/freeform/brainstorming/support_claim/qna.yaml
+++ b/compositional_skills/writing/freeform/brainstorming/support_claim/qna.yaml
@@ -33,3 +33,4 @@ seed_examples:
   question: Produce three convincing arguments that support the claim that universal
     healthcare is a necessary component of a just society.
 task_description: ''
+attribution: 'self_authored'
