--- a/compositional_skills/writing/freeform/debate/qna.yaml
+++ b/compositional_skills/writing/freeform/debate/qna.yaml
@@ -25,3 +25,4 @@ seed_examples:
   question: Debate the merits and drawbacks of implementing a universal basic income
     between an economist, a sociologist, and a policy maker.
 task_description: ''
+attribution: 'self_authored'
