--- a/compositional_skills/writing/freeform/legal/agreement/qna.yaml
+++ b/compositional_skills/writing/freeform/legal/agreement/qna.yaml
@@ -40,3 +40,4 @@ seed_examples:
   question: I need to create a licensing agreement for my intellectual property. Can
     you help me draft the terms and conditions, including royalties and exclusivity?
 task_description: ''
+attribution: 'self_authored'
