--- a/compositional_skills/writing/freeform/poetry/haiku/qna.yaml
+++ b/compositional_skills/writing/freeform/poetry/haiku/qna.yaml
@@ -7,3 +7,4 @@ seed_examples:
     Nature''s art takes flight.'
   question: Write a haiku that captures the beauty of a single autumn leaf.
 task_description: ''
+attribution: 'self_authored'
