--- a/compositional_skills/writing/freeform/poetry/limerick/qna.yaml
+++ b/compositional_skills/writing/freeform/poetry/limerick/qna.yaml
@@ -12,3 +12,4 @@ seed_examples:
   question: Write a limerick that playfully describes a flower's bloom and its effect
     on nearby insects.
 task_description: ''
+attribution: 'self_authored'
