--- a/compositional_skills/writing/freeform/poetry/narrative_poetry/qna.yaml
+++ b/compositional_skills/writing/freeform/poetry/narrative_poetry/qna.yaml
@@ -65,3 +65,4 @@ seed_examples:
   question: Write a narrative poem about a solitary tree that has witnessed centuries
     of change in the surrounding landscape.
 task_description: ''
+attribution: 'self_authored'
