--- a/compositional_skills/writing/freeform/poetry/ode/qna.yaml
+++ b/compositional_skills/writing/freeform/poetry/ode/qna.yaml
@@ -76,3 +76,4 @@ seed_examples:
   question: Craft an ode to the power of the lightning, and how it can help you to
     tap into the beauty of creativity and inspiration.
 task_description: ''
+attribution: 'self_authored'
