--- a/compositional_skills/writing/freeform/poetry/sonnet/qna.yaml
+++ b/compositional_skills/writing/freeform/poetry/sonnet/qna.yaml
@@ -32,3 +32,4 @@ seed_examples:
     A vibrant farewell, in nature''s tranquil trance.'
   question: Compose a sonnet that portrays the vibrant colors of a fall foliage.
 task_description: ''
+attribution: 'self_authored'
