--- a/compositional_skills/writing/freeform/prose/articles/qna.yaml
+++ b/compositional_skills/writing/freeform/prose/articles/qna.yaml
@@ -34,3 +34,4 @@ seed_examples:
   question: Seeking insights for an article on the benefits of restorative justice
     practices in schools and communities.
 task_description: ''
+attribution: 'self_authored'
