--- a/compositional_skills/writing/freeform/prose/emails/informal/qna.yaml
+++ b/compositional_skills/writing/freeform/prose/emails/informal/qna.yaml
@@ -17,3 +17,4 @@ seed_examples:
   question: Write an informal email to a friend asking for advice on planning a surprise
     party.
 task_description: ''
+attribution: 'self_authored'
