--- a/compositional_skills/writing/freeform/prose/screenplay/qna.yaml
+++ b/compositional_skills/writing/freeform/prose/screenplay/qna.yaml
@@ -120,3 +120,4 @@ seed_examples:
     '
   question: Write a screenplay about a heist gone wrong.
 task_description: ''
+attribution: 'self_authored'
