--- a/compositional_skills/writing/freeform/social_media/instagram/qna.yaml
+++ b/compositional_skills/writing/freeform/social_media/instagram/qna.yaml
@@ -6,3 +6,4 @@ seed_examples:
   question: I'm off on a city break with my friends! Can you suggest a witty Instagram
     caption for my travel photos?
 task_description: ''
+attribution: 'self_authored'
