--- a/compositional_skills/writing/freeform/social_media/twitter/qna.yaml
+++ b/compositional_skills/writing/freeform/social_media/twitter/qna.yaml
@@ -8,3 +8,4 @@ seed_examples:
   question: Draft a 'Motivation Monday' story on Twitter, brainstorming a powerful
     quote or message that inspires your audience.
 task_description: ''
+attribution: 'self_authored'
