--- a/compositional_skills/writing/freeform/technical/guide/qna.yaml
+++ b/compositional_skills/writing/freeform/technical/guide/qna.yaml
@@ -175,3 +175,4 @@ seed_examples:
   question: Create a technical guide on implementing a containerization strategy using
     Docker and Kubernetes.
 task_description: ''
+attribution: 'self_authored'
