--- a/compositional_skills/writing/freeform/technical/proposal/qna.yaml
+++ b/compositional_skills/writing/freeform/technical/proposal/qna.yaml
@@ -134,3 +134,4 @@ seed_examples:
   question: Write a technical proposal for the development of a mobile app, addressing
     user experience, functionality, and performance.
 task_description: ''
+attribution: 'self_authored'
