--- a/compositional_skills/writing/freeform/technical/report/qna.yaml
+++ b/compositional_skills/writing/freeform/technical/report/qna.yaml
@@ -132,3 +132,4 @@ seed_examples:
   question: Compose a technical report on the benefits and challenges of implementing
     microservices architecture in software development.
 task_description: ''
+attribution: 'self_authored'
