--- a/compositional_skills/writing/freeform/technical/specification/qna.yaml
+++ b/compositional_skills/writing/freeform/technical/specification/qna.yaml
@@ -126,3 +126,4 @@ seed_examples:
   question: Develop a technical specification for a new hardware or software component,
     including requirements, design, and testing.
 task_description: ''
+attribution: 'self_authored'
