--- a/compositional_skills/extraction/abstractive/main_takeaway/qna.yaml
+++ b/compositional_skills/extraction/abstractive/main_takeaway/qna.yaml
@@ -59,4 +59,4 @@ seed_examples:
     \ actor.\n"
   question: Generate the main takeaways from the given text.
 task_description: ''
-attribution: 'self authored'
+attribution: 'self_authored'
