Describe the contribution to the taxonomy
The age appropriatness task evaluates minimum suggested age for
content based on a synopsis, multiple summaries, or a detailed
description of a movie or tv show. Factors include certified rating
such as "G", "PG", "PG-13", "R", "NC-17", "TV-MA", "16+", "18+", "13+",
depictions of profanity, violence or gore, drug or alcohol use,
sex and nudity, and positive or negative messages or story themes
in the plot.

The model should be able to infer an appropriate minimum age for content
based on evaluating a summary, synopsis, list of plot keywords, or by
taking existing certification ratings into account. It can be extended
with additional examples, or perhaps the model could perform a stepwise
evaluation by first summarizing a screenplay and then evaluating
if there are mature themes or depictions.

Input given at the prompt:

What age range would be appropriate viewers for a movie that meets this
description: "Sex & Nudity: Mild; Violence & Gore: Moderate;
Profanity: Mild; Alcohol, Drugs, & Smoking: Moderate;
Frightening & Intense Scenes: Severe

Response that was received

TBD

Response that is now received instead

TBD

Contribution checklist

 tested contribution with lab generate [WIP]
 lab generate does not produce any warnings or errors [WIP]
 all commits are signed off (DCO) [WIP]
 the qna.yaml file was linted [WIP]

Signed-off-by: dsneddon <dsneddon@redhat.com>

--- a/compositional_skills/extraction/inference/qualitative/age_appropriate/qna.yaml
+++ b/compositional_skills/extraction/inference/qualitative/age_appropriate/qna.yaml
@@ -2,7 +2,14 @@
 created_by: dsneddon
 seed_examples:
   - answer: >
+      This content appears to be appropriate for ages 15 and above. It contains
+      moderate levels of violence and gore, moderate levels of alcohol, tobacco,
+      or drug use, and very frigntening or intense scenes that may disturb
+      younger viewers. The themes used in the plot include betrayal, conspiracy,
+      murder, deception, and other negative aspects of human behavior. Viewer
+      discretion is advised.
     question: >
+      What would be an appropriate age for a TV show with the following content.
     context: >
       Sex & Nudity: Mild;
       Violence & Gore: Moderate;
