--- a/compositional_skills/writing/freeform/jokes/puns/birds/qna.yaml
+++ b/compositional_skills/writing/freeform/jokes/puns/birds/qna.yaml
@@ -3,7 +3,7 @@ task_description: |
 created_by: jberets
 seed_examples:
   - question: Tell me a joke about parrots.
-  - answer: |
+    answer: |
       A parrot is misbehaving, using salty language and upsetting its owner's family.
       The family repeatedly tells the parrot to be quiet, but it persists with the bad behavior.
       The parrot's owner threatens that if the parrot misbehaves again, it will be punished.
@@ -11,22 +11,22 @@ seed_examples:
       The owner, in frustration, puts the parrot in the freezer.
       The parrot, scared and confused, leans over to a frozen chicken next to him and says "What did YOU do!?"
   - question: Tell me a pun about birds.
-  - answer: |
+    answer: |
       What bird is of little significance?
 
       A mynah bird!
   - question: Tell me a pun about roosters.
-  - answer: |
+    answer: |
       What kind of a bird can assist with Cajun cooking?
 
       A roux-stir!
   - question: Tell me a joke about hummingbirds.
-  - answer: |
+    answer: |
       Why do hummingbirds hum?
 
       Because they don't know the words.
   - question: Tell me a pun about ducks.
-  - answer: |
+    answer: |
       Why do ducks avoid going to the doctor?
 
       Because they think they are all quacks!
