Add task description.
Signed-off-by: Pablo Ridolfi <pabloridolfi@gmail.com>

--- a/compositional_skills/writing/freeform/asciiart/qna.yaml
+++ b/compositional_skills/writing/freeform/asciiart/qna.yaml
@@ -27,4 +27,4 @@ seed_examples:
                 |* |
               ~~~~~~~~'
   question: Draw a tree with ASCII art.
-task_description: ''
+task_description: 'This task enables/improves drawing using ASCII art.'
