add more examples
Signed-off-by: Pablo Ridolfi <pabloridolfi@gmail.com>

--- a/compositional_skills/writing/freeform/asciiart/qna.yaml
+++ b/compositional_skills/writing/freeform/asciiart/qna.yaml
@@ -27,4 +27,35 @@ seed_examples:
                 |* |
               ~~~~~~~~'
   question: Draw a tree with ASCII art.
+- answer: '
+    --------------------------
+    |                        |
+    |                        |
+    |                        |
+    |                        |
+    |                        |
+    |                        |
+    |                        |
+    |                        |
+    |                        |
+    --------------------------'
+  question: Draw a square with ASCII art.
+- answer: '
+        /\
+       /  \
+      /    \
+     /      \
+    /        \
+   /          \
+   ------------'
+  question: Draw a triangle with ASCII art.
+- answer: '
+        /\     /\
+       /  \___/  \
+      /           \
+     (  ()     ()  )
+    >(-     o     -)<
+       (___/ \___)
+        (_______)'
+  question: Draw a cat with ASCII art.
 task_description: 'This task enables/improves drawing using ASCII art.'
