--- a/compositional_skills/writing/freeform/jokes/puns/general/qna.yaml
+++ b/compositional_skills/writing/freeform/jokes/puns/general/qna.yaml
@@ -42,4 +42,25 @@ seed_examples:
 
     '
   question: Tell me a pun about Neverland.
+- answer: 'What do you call a fake spaghetti?
+
+
+    An impasta!
+
+    '
+  question: Tell me a pun about pasta.
+- answer: 'What do you can an alligator in a vest?
+
+
+    An investigator.
+
+    '
+  question: Tell me a pun about alligators.
+- answer: 'What do you call a broken can opener?
+
+
+    A can''t opener.
+
+    '
+  question: Tell me a pun about can openers.
 task_description: to teach a large language model to come up with puns
