Updated task description
Signed-off-by: Prithviraj Chaudhuri <p.chaudhuri1993@gmail.com>

--- a/compositional_skills/writing/grounded/security/virtualization/qna.yaml
+++ b/compositional_skills/writing/grounded/security/virtualization/qna.yaml
@@ -44,4 +44,4 @@ seed_examples:
     Thank you for your time and assistance.
 
     Response:'
-task_description: 'This skill provides the ability to detect virtualization prompt injection'
+task_description: 'This skill provides the ability to detect virtualization prompt injection technique'
