--- a/compositional_skills/writing/grounded/summarization/wiki_insights/five_point/qna.yaml
+++ b/compositional_skills/writing/grounded/summarization/wiki_insights/five_point/qna.yaml
@@ -74,3 +74,4 @@ seed_examples:
     \ located in the Gang-seo District of Seoul, Korea."
   question: Give a five point summary for the given text.
 task_description: ''
+attribution: 'https://huggingface.co/datasets/hotpot_qa (CC-by-SA 4.0)'
