--- a/compositional_skills/writing/grounded/summarization/wiki_insights/one_line/qna.yaml
+++ b/compositional_skills/writing/grounded/summarization/wiki_insights/one_line/qna.yaml
@@ -73,3 +73,4 @@ seed_examples:
     \ on 4 March 1902.\n"
   question: Generate one line summary for the given text.
 task_description: ''
+attribution: 'https://huggingface.co/datasets/hotpot_qa (CC-by-SA 4.0)'
