--- a/compositional_skills/extraction/information/named_entities/emails/qna.yaml
+++ b/compositional_skills/extraction/information/named_entities/emails/qna.yaml
@@ -15,7 +15,7 @@ seed_examples:
       Which are the unique email addresses?
     answer: >
       The unique email addresses are: john.doe@example.com,
-      johndoe@example.com, john.doe@gmail.com.  john.doe@gmail.com,
+      johndoe@example.com, john.doe@gmail.com. john.doe@gmail.com,
       johndoe@gmail.com are actually the same address, because the Gmail
       email  provider ignores the dots in the username.
   - context: |
@@ -24,7 +24,7 @@ seed_examples:
       Which are the unique email addresses?
     answer: >
       john.doe@gmail.com, johndoe@gmail.com, and j.ohndoe@gmail.com are
-      actually the same address,  because the Gmail email provider ignores the
+      actually the same address, because the Gmail email provider ignores the
       dots in the username.
   - context: >
       john.doe@example.com, jane.doe@example.com, john.doe@gmail.com,
@@ -41,4 +41,4 @@ seed_examples:
     answer: |
       The unique email addresses are: john.doe@example.com, johndoe@example.com
 task_description: |
-  Ability to recognize gmail duplicates and extract unique email addresses
+  Ability to recognize gmail aliases and extract unique email addresses
